--- a/package.json
+++ b/package.json
@@ -1,3 +1,8 @@
 {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dependencies": {
+        "express": "^4.17.1",
+        "express-favicon": "^2.0.1",
+        "path": "^0.12.7"
+    }
 }
