--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
+  "name": "project3",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
+    "path": "^0.12.7"
+  },
+  "devDependencies": {},
+  "scripts": {
     "start": "node server.js",
-    "dependencies": {
-        "express": "^4.17.1",
-        "express-favicon": "^2.0.1",
-        "path": "^0.12.7"
-    }
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
+  "author": "Paul Cruz",
+  "license": "ISC"
 }
