--- a/client/package.json
+++ b/client/package.json
@@ -2,9 +2,13 @@
   "name": "tech-store",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.4.1",
+    "node": "10.13.0"
+  },
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "contentful": "^7.5.0",
+    "contentful": "^7.6.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-icons": "^3.5.0",
